# qarc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: README.md  baselines.json
demos/: README.md  demo_compare.py  demo_grover.py  demo_qft.py
docs/: adrs.md
prompts/: README.md  system_compact.txt  system_full.txt
reports/: eval_report.md  eval_report_haiku.md  eval_report_haiku_smoke.md  eval_report_ollama.md
scripts/: demo_qaoa.py  generate_baselines.py  generate_example_traces.py  run_eval.py  run_scored_eval.py  trace_viewer.py  verify_demos_q.py  verify_eval_q.py  verify_gate_q.py  verify_gate_q_001.py  verify_qaoa_q.py  verify_scoring_q.py  verify_trace_q.py
src/qarc/: __init__.py  anthropic_client.py  baselines.py  client.py  eval.py  interpreter.py  ollama_client.py  openai_compatible_client.py  registry.py  report.py  runtime.py  scoring.py  trace.py  viewer.py
src/qarc/tools/: __init__.py  algorithms.py  circuit.py  resources.py  transpile.py
tests/: fakes.py  test_algorithms.py  test_baselines.py  test_error_handling.py  test_eval_runner.py  test_llm_provider.py  test_placeholder.py  test_properties.py  test_registry.py  test_report.py  test_runtime_loop.py  test_runtime_skeleton.py  test_scoring.py  test_tools_qiskit.py  test_trace.py  test_viewer.py
traces/examples/: 99c3c7d9_1779966155.jsonl  compare_demo.jsonl  grover_demo.jsonl  qft_demo.jsonl
