[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qarc"
version = "0.1.0"
description = "Quantum Agent Runtime Core — LLM tool-use orchestration over Qiskit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qiskit>=1.0,<2.0",
    "qiskit-aer>=0.14,<1.0",
    "anthropic>=0.30.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/qarc"]

[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
